2013-12-05      Gaius Mulley <gaius@gnu.org>

	* gcc-versionno/gcc/gm2/Make-lang.in:  build a
	  pim-coroutine version of SYSTEM.def and install it.
	* gcc-versionno/gcc/gm2/gm2-libs-coroutines/SYSTEM.def:
	  add (* @SYSTEM_DATATYPES@ *) to the export list and
	  @SYSTEM_TYPES@ to the commented out type list.
	* gcc-versionno/gcc/gm2/gm2.texi:  updated building
	  section on how to build a 4.1.2 based gm2 under
	  multiarch (Wheezy).
	* gcc-versionno/gcc/gm2/gm2-libs-coroutines/SYSTEM.def:
	  removed duplicate exports of BYTE, ADDRESS and WORD.
	* gcc-versionno/gcc/gm2/gm2-libs-coroutines/SYSTEM.def:
	  fixed previous change.
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/03-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/04-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/05-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/06-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/07-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/08-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/09-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/10-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/11-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/12-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/13-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/14-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/15-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/16-patch:
	* gcc-versionno/gcc/gm2/patches/gcc/4.1.2/17-patch:
	  (New files).
	* gcc-versionno/gcc/gm2/gm2.texi:  changed configure
	  examples to reflect new source tree layout.

2013-12-04      Gaius Mulley <gaius@gnu.org>

	* repository now using git and the new structure.
	
2013-01-09      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  updated the building process for OpenBSD
	  and NetBSD.

2013-01-07      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/SShortWholeIO.def:  (added file).
	* gm2/gm2-libs-iso/SShortWholeIO.mod:  (added file).
	* gm2/gm2-libs-iso/SShortIO.def:  (added file).