@@ -1875,10 +1875,10 @@ $(objdir)/gm2/gm2-libs-iso/SYSTEM.def: stage1/gm2/cc1gm2$(exeext)
              "./xgm2 -B./stage1/gm2" $@
 
 $(objdir)/gm2/gm2-libs-coroutines/SYSTEM.def: stage1/gm2/cc1gm2$(exeext)
-	bash $(srcdir)/gm2/tools-src/makeSystem -fiso \
+	bash $(srcdir)/gm2/tools-src/makeSystem -fpim \
              $(srcdir)/gm2/gm2-libs-coroutines/SYSTEM.def \
              $(srcdir)/gm2/gm2-libs-coroutines/SYSTEM.mod \
-             -I$(srcdir)/gm2/gm2-libs-coroutines:$(srcdir)/gm2/gm2-libs-iso:$(srcdir)/gm2/gm2-libs: \
+             -I$(srcdir)/gm2/gm2-libs-coroutines:$(srcdir)/gm2/gm2-libs:$(srcdir)/gm2/gm2-libs-iso \
              "./xgm2 -B./stage1/gm2" $@
 
 build-libs-min: $(objdir)/gm2/gm2-libs-min/SYSTEM.def \
