@@ -1,3 +1,15 @@
+2013-12-06      Gaius Mulley <gaius@gnu.org>
+
+	* gcc-version/gcc/testsuite/gm2/pimcoroutes/pass/gm2.exp:
+	* gcc-version/gcc/testsuite/gm2/pimcoroutes/pass/exports.mod:
+	* gcc-version/gcc/testsuite/gm2/pimcoroutes/pass/exports2.mod:
+	  (New files)
+	* gcc-versionno/gcc/gm2/Make-lang.in:  changed flag to -fpim
+	  and changed path appropriately.
+	* gcc-versionno/gcc/gm2/gm2-libs-coroutines/SYSTEM.def: corrected
+	  export list taking care to only have data types on the 
+	  (* @SYSTEM_DATATYPES@ *) line.
+
 2013-12-05      Gaius Mulley <gaius@gnu.org>
 
 	* gcc-versionno/gcc/gm2/Make-lang.in:  build a
